@@ -4,13 +4,15 @@ Hash: SHA256
 DIST Module-Starter-1.58.tar.gz 44534 SHA256 03ea8f1c8016aa034b6ed253a324b404221f7bbeacdb43fd61848319e9d4e6b3 SHA512 436c7147196e1eb42145856efd81eec0347ecb5485d58f6a3e82d45f0d4e3da6fb4eb017e6c9af0c890bd7a3833e53d76552205fd62335f27b7e22f08c6b7e73 WHIRLPOOL 6a5677e4c1c753c4bfe7d956f5447780bfd92e7c0434c8e42883945dbe8c8b49e7de36b9d1e2852a79949d154136b17867e0298bc96065f58a87412a65282182
 DIST Module-Starter-1.60.tar.gz 53863 SHA256 b038188b609b3ad16406214242d547b886cfdb6c054e672d51ed8c9cb7805b7f SHA512 2fc25752974f3e9534244ac19c3ed451bb5e85aee1ea105ff6584b998107a20655a31d56b336ade6e9f5d627ab33f1b4a5bc108c83a00c74fe90e6f69b6d18b3 WHIRLPOOL 9c3198a09b532704499dd6b19d613c93a23554359b7d7ad1c698f1c1ede05c2a1733bbb6bb56f22ea0f352dd7de46088b48552da2bd9445f5ca605cd0c331963
 EBUILD Module-Starter-1.580.0.ebuild 624 SHA256 b877471a00624a35704cfee1ad297a7b15b60ffdebef5b64e58edb3cab3732c8 SHA512 3c0f33fae07651b5e4c915249de8b84e3e4f28bc834d94d34c5e1b908cdaa1290a66b9b929fcbb955c7c89f90139a5614b1405f6447a882d72e479d0edcada09 WHIRLPOOL 2ef26647c53086d0637488c7e23732023efb792fec45c34a7b110f03c7d457085bc205b82efd0dc13ed4b3751b27ec2c7af897176691126f047631d4884c95c8
-EBUILD Module-Starter-1.600.0.ebuild 624 SHA256 04025964c47c55da900eaf258764118be855d74f333d478eee81874801644e81 SHA512 65dcf9f3bf2b08f95b3493a9e474ce44fa4df38dc72e6b6a45a9b15bb2b7693746e2a1ee86f8366ac10a6fe996581756ee4fa0e341503294d5cac4fc18fc6897 WHIRLPOOL 0dd2d7f39ec17b3658d416d094aab004083779d99afd166b54f2d5a32818db2bfc79453b0cbd51860cc177e975880c47b03dce9b21c8660efeff0d75ade8c8e2
-MISC ChangeLog 1759 SHA256 752ab573355391c5339e92763c5eb64d042cd4f0d301cbf8c49c3d2c07ba359c SHA512 399d14d46d1bd00002cdf706bc28653feb6683e3ee305972016d139481eeebc2ef25aae431a2fa602b9cdb4a0b1bb90c0636377d621a3938c02a8e15d7e7b959 WHIRLPOOL 4fe630740885951a3e8dd16a5d4cfc9f858879a879d92989a8d3d742c4e100b25b6910506ff357197b38ade756632bea5b2f162044707cc200d02d7c0691c2ce
+EBUILD Module-Starter-1.600.0.ebuild 625 SHA256 4545004ff17d48e8d5c39dd78f51f15e77f2a4ceb3977f510ff6e467b7736171 SHA512 f0c0350b02e55fb10a148e7d553bc262b062bb143bcb0b947fa0670a7b0affb622a72c15c914f70e21334b9149f2a761bb4ffc2e5843cda51ce8dc9f53b9ccf3 WHIRLPOOL 808441aa4707504de916ef0d96de81b0c2d5130383097f83caf8aeb870239d7257ced0000e903396bba4a7ccbda22342cb2ba8281d731d400ac6ae644562b736
+MISC ChangeLog 1880 SHA256 36862d934227b21767dc31eb8d586a16fbfa115fbaa00ba6797243788d498def SHA512 b43d99133c9b5661b29ad46ffa1c0f17969067fc4e47c2c63e45677f65945dc94d8c3c664572825da34c1ad5d658f1a3dc9ec8a5bc8ca9294e4592cc1bebd972 WHIRLPOOL 0c38d098f623cf6d1f79066a47e9215d598bb720fc48d000c37914db7dc98be40346272fff2c23398f6784284fb74bf4a51e402c49531940c7590f734ae36102
 MISC metadata.xml 593 SHA256 2710d5c3665181150b26c1d2c8abc87ae220951946e0144bbd653e0e8cb812f1 SHA512 3d18a7a5e5f7646b44b1c3d596e37caedcd12607225478f85f7a061ecb00a2c5ca622808df545537607c5d0cd8b56f1a498a1cbcb79e88376a529d4c40b0be7e WHIRLPOOL 978a5db59982ac7678c05c1d8cff9842abc5f31daa9ec5b2d0af0974e278470f2fb86003700c8c0cc0f401869058183ff26372b365a5323720d69218be78cf1a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlCWeAIACgkQV3J2n04EauwQxQCeP4T1Q8fvAGo8oR+gWlIFZH74
-LycAnRDVtUsy+zPA3LHgaHr8dTaM0fnj
-=SHbe
+iJwEAQEIAAYFAlHAxOcACgkQG9wOWsQutdYq/QP9GJCymjwm91/eG/rL81jnSYf5
+eOEX+ZnXXxSbaLHoYfS0F5tlOZ6aov1ibbrJKXYpWimah8kDVkRpZ2gX1+2LSC9v
+IPal3qpusfLWsClXpXbaVEjcZ8b3S50snb9LUfSPq1tj6LJQ54rB2C7/5f7c0J+g
+puNVrN2mIQ12Fm7wsIg=
+=06O9
 -----END PGP SIGNATURE-----
