@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Module-Starter/Attic/Module-Starter-1.600.0.ebuild,v 1.1 2012/11/04 14:13:21 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Module-Starter/Attic/Module-Starter-1.600.0.ebuild,v 1.2 2013/06/18 20:16:14 zlogene Exp $
 
 EAPI=4
 
@@ -11,7 +11,7 @@ inherit perl-module
 DESCRIPTION="A simple starter kit for any module"
 
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="test"
 
 RDEPEND="
