@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Module-Starter
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Module-Starter/ChangeLog,v 1.9 2012/11/04 14:13:21 tove Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Module-Starter/ChangeLog,v 1.10 2013/06/18 20:16:14 zlogene Exp $
+
+  18 Jun 2013; Mikle Kolyada <zlogene@gentoo.org> Module-Starter-1.600.0.ebuild:
+  amd64/x86 stable wrt bug #449594
 
 *Module-Starter-1.600.0 (04 Nov 2012)
 
